feat: logger, cli, panic handler

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
+backtrace = "0.3.74"
+clap = { version = "4.5.18", features = ["derive"] }
+colored = "2.1.0"
 log = "0.4.22"
+thiserror = "1.0.64"
 vit_logger = "0.1.6"
