--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ colored = "2.1.0"
 log = "0.4.22"
 thiserror = "1.0.64"
 vit_logger = "0.1.6"
+inkwell = { version = "0.5.0", features = ["llvm18-0"] }
